// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The CardDetails component matches the snapshot when given specific props 1`] = `
Array [
  .c3 ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c3 li {
  position: relative;
  margin-left: 16px;
}

.c3 li:before {
  content: "✓";
  color: #77b227;
  position: absolute;
  font-weight: bold;
  display: inline-block;
  left: -16px;
}

yoast-seo.g7[id="c2"] {
  content: "c3,";
}

.c1 {
  margin-bottom: 12px;
  border-bottom: 1px #ddd solid;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

yoast-seo.g8[id="c0"] {
  content: "c1,";
}

<div
    className="c0 c1"
  >
    <div
      className="c2 c3"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Do you know the essential first step of good SEO? It’s keyword research. In this training, 
you’ll learn how to research and select the keywords that will guide searchers to your pages.",
        }
      }
    />
  </div>,
  .c5 {
  border: 0;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute !important;
  width: 1px;
  word-wrap: normal !important;
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

yoast-seo.g1[id="c4"] {
  content: "c5,";
}

.c3 {
  color: #000;
  white-space: nowrap;
  display: block;
  border-radius: 4px;
  background-color: #ddd;
  padding: 12px 16px;
  box-shadow: inset 0 -4px 0 rgba(0,0,0,0.2);
  border: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: bold;
  font-size: inherit;
  margin-bottom: 8px;
}

.c3:hover,
.c3:focus,
.c3:active {
  color: #000;
  background-color: #cecece;
}

.c3:active {
  background-color: #cecece;
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
  -webkit-filter: none;
  filter: none;
}

yoast-seo.g3[id="c2"] {
  content: "c3,";
}

.c7 {
  font-weight: bold;
}

yoast-seo.g5[id="c6"] {
  content: "c7,";
}

.c1 {
  text-align: center;
}

yoast-seo.g6[id="c0"] {
  content: "c1,";
}

<div
    className="c0 c1"
  >
    <a
      className="c2 c3"
      href="https://yoast.com/cart/?add-to-cart=1311259"
      rel={null}
      target="_blank"
    >
      Start your free trail
      <span
        className="c4 c5"
      >
        (Opens in a new browser tab)
      </span>
    </a>
    <a
      className="c6 c7"
      href="https://yoast.com/academy/keyword-research-training/"
      rel={null}
      target="_blank"
    >
      Read more about this training »
      <span
        className="c4 c5"
      >
        (Opens in a new browser tab)
      </span>
    </a>
  </div>,
]
`;

exports[`The empty CardDetails component matches the snapshot 1`] = `
Array [
  .c3 ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c3 li {
  position: relative;
  margin-left: 16px;
}

.c3 li:before {
  content: "✓";
  color: #77b227;
  position: absolute;
  font-weight: bold;
  display: inline-block;
  left: -16px;
}

yoast-seo.g7[id="c2"] {
  content: "c3,";
}

.c1 {
  margin-bottom: 12px;
  border-bottom: 1px #ddd solid;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

yoast-seo.g8[id="c0"] {
  content: "c1,";
}

<div
    className="c0 c1"
  >
    <div
      className="c2 c3"
      dangerouslySetInnerHTML={
        Object {
          "__html": "",
        }
      }
    />
  </div>,
  .c1 {
  text-align: center;
}

yoast-seo.g6[id="c0"] {
  content: "c1,";
}

<div
    className="c0 c1"
  />,
]
`;
